examples/test/testpolicy14794.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14794
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key33: value3
      key3: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value42
      podSelector:
        matchLabels:
          key48: value1
          key29: value26
